# ferox

./: .gitignore  ARCHITECTURE_DIAGRAMS.md  CHANGELOG.md  CLI_INTEGRATION_COMPLETE.md  COMPLETION_REPORT.md  Cargo.toml  DELIVERY_SUMMARY.md  DEVELOPMENT.md  IMPLEMENTATION_SUMMARY.md  INDEX.md  MAINTENANCE_ENHANCEMENTS.md  MAINTENANCE_QUICK_REFERENCE.md  MAINTENANCE_SYSTEM_SUMMARY.md  PHASE1_FIXES.md  PHASE2_INFRASTRUCTURE.md  PHASE3_COMPLETE.md  PHASE_2_COMPLETE.md  README.md  README_IMPLEMENTATION.md  cli_session.out  demo_phase3.sh  domain_recon_plan.yaml  domain_recon_plan_results.json  ferox_cli_dashboard_test.sh  ferox_demo_test.sh  ferox_maintenance_showcase.sh  ferox_security.toml  ferox_security.toml.example  ferox_theme.toml  info.txt  info2.txt  info3.txt  prompt.txt  remove_me.txt  setup.sh  test_scanner.txt  test_wordlist.txt  upgrade.md  verify_phase1.sh  wordlist.txt
.backups/components/: Loading.test.tsx  SessionFilters.test.tsx  SessionFilters.tsx  SessionTree.tsx  TabBar.tsx  Terminal.tsx  ThemeToggle.tsx  index.ts
.backups/components/modules/: CredentialsViewer.tsx  MitreAttack.tsx  NetworkScanner.tsx  Reports.tsx  TaskScheduler.tsx
.backups/components/network/: NetworkLegend.tsx  NetworkNode.tsx  index.ts
.backups/styles/: network-glow.css  themes.css
.github/workflows/: ci.yml
bug_bounty/shopify_test/: README.md  TESTING_CHECKLIST.md  console_tester.js  graphql_introspection.py
config/: c2.example.toml
dashboard-server/: Cargo.toml
dashboard-server/src/: api.rs  main.rs  state.rs  types.rs  ws.rs
dashboard-server/src/integration/: bridge.rs  mod.rs  modules.rs  session_sync.rs
dashboard-server/static/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
dashboard-server/static/src/: App.tsx  index.css
dashboard-server/static/src/components/: ErrorBoundary.tsx  Layout.tsx  Skeleton.tsx
dashboard-server/static/src/hooks/: index.ts  useApi.ts  useDebounce.ts  useWebSocket.ts
dashboard-server/static/src/pages/: Credentials.tsx  Dashboard.tsx  Mitre.tsx  Network.tsx  Reports.tsx  Sessions.tsx  Terminal.tsx  index.ts
dashboard-server/static/src/store/: index.ts
dashboard-server/static/src/types/: index.ts
demo_results_20251112_205800/: authorization.txt  version.txt
docs/: CHANGELOG_PRODUCTION.md  CLAUDE_CODE.md  ENHANCEMENTS.md  FEROX_COMPLETE_DOCUMENTATION.md  IMPLEMENTATION_COMPLETE.md  INSTALLATION.md  INTEGRATION_SUMMARY.md  MEMORY_FORENSICS.md  PHASE3_IMPLEMENTATION.md  PHASE_2_INTEGRATION_PLAN.md  PLUGIN_DEVELOPMENT.md  PRODUCTION_READINESS.md  README.md  REPORT_GENERATOR_IMPLEMENTATION.md  SESSION_MANAGEMENT_COMPLETE.md  SESSION_MANAGEMENT_IMPLEMENTATION.md  VOLATILITY_COMPARISON.md  c2.md  changelog.md  cli-dashboard.md  developer-guide.md  ferox-scenarios.html  ferox_executive_summary.md  ferox_product_brief.md  maintenance-implementation-guide.md  maintenance-system.md  maintenance.md  memory-forensics.md  modules.md  overview.md  sessions.md  testing-and-ci.md  testing-strategy.md  usage-guide.md
docs/api/: tauri-commands.md
docs/design/: launch-checklist.md  smart-payload-system.md
docs/developer/: architecture.md  console.md  examples.md  memory-forensics.md
docs/user-guide/: dashboard.md  getting-started.md  modules.md  reports.md  troubleshooting.md
dumps/: test_dump.raw
examples/: phase3_examples.md  test_advanced_modules.rs  test_multi_module.rs  test_pdf_export.rs
ferox-desktop/: index.html  package-lock.json  package.json  tailwind.config.backup.js  tailwind.config.js  vite.config.ts  vitest.config.ts
ferox-desktop/scripts/: generate-icons.js
ferox-desktop/src/: App.tsx  index.css  main.tsx
ferox-desktop/src-tauri/: Cargo.toml  tauri.conf.json
ferox-desktop/src-tauri/icons/: icon.icns
ferox-desktop/src-tauri/src/: lib.rs  main.rs
ferox-desktop/src-tauri/src/bridge/: mod.rs
ferox-desktop/src-tauri/src/commands/: mod.rs  module_commands.rs  network_commands.rs  opsec_commands.rs  payload_commands.rs  recon_commands.rs  scanner_commands.rs  session_commands.rs  simulation_commands.rs  terminal_commands.rs
ferox-desktop/src-tauri/src/security/: audit.rs  mod.rs  validation.rs
ferox-desktop/src-tauri/src/session/: mod.rs
ferox-desktop/src-tauri/src/terminal/: mod.rs
plugins/volatility_plugins/: ferox_malfind.py  ferox_netscan.py  ferox_pslist.py
plugins/yara_rules/: apt_groups.yar  ransomware.yar  windows_malware.yar
scripts/: pre-commit.sh
src/: lib.rs  main.rs
src/cli/: app.rs  command_router.rs  dashboard.rs  dashboard_commands.rs  doctor.rs  maintenance.rs  maintenance_commands.rs  memory.rs  mod.rs  theme.rs
src/core/: audit.rs  config.rs  exploit_framework.rs  memory_analysis.rs  mod.rs  module.rs  module_metadata.rs  module_options.rs  payload.rs  payload_engine.rs  payload_system.rs  reporter.rs  result_store.rs  session.rs  session_db.rs  theme.rs  workflow_manager.rs
src/handlers/: file_ops.rs  mod.rs  security.rs  shell_local.rs  shell_remote.rs
src/infra/: crypto.rs  mod.rs
src/memory_forensics/: credential_extractor.rs  dump_parser.rs  malware_detector.rs  mitre_mapper.rs  mod.rs  network_analyzer.rs  process_analyzer.rs  registry_analyzer.rs  types.rs  volatility_bridge.rs
src/modules/: cleanup.rs  creds.rs  exfil.rs  lateral.rs  mod.rs  opsec_modules.rs  persist.rs  privesc.rs
src/tools/: maintenance_legacy.rs  manifest.rs  mod.rs  output.rs
src/tui/: dashboard.rs  mod.rs  theme.rs
tests/: doctor_tests.rs  integration_c2.rs  integration_payload.rs  integration_tests.rs  memory_analysis_tests.rs  module_visibility.rs  process_parser_tests.rs
tests/integration/: maintenance.rs  memory_analysis_tests.rs  mod.rs
tests/unit/: mod.rs  process_parser_tests.rs
theme-guide/: COLORS.md  COMPONENTS.md  CSS_VARIABLES.md  DARK_LIGHT_MODE.md  I18N.md  QUICK_REFERENCE.md  README.md  THEME_SYSTEM.md  TYPOGRAPHY.md
upgrade_ferox/: PROJECT_SUMMARY.md  QUICK_START.md  README.md  full_integration.rs  github_gist_loader.rs  impementaion.md  main.rs  mod.rs  payload_engine.rs  rev_tcp_fileless.rs  samary.md
(+238 files in other folders)
