[package]
name = "ferox"
version = "2.0.0"
edition = "2024"
authors = ["Abdulwahed Mansour <abdulwahed.mansour@gmail.com>"]
description = "Ferocious security framework built in Rust - Fast, Fierce, Fearless"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/ferox"
keywords = ["security", "penetration-testing", "cybersecurity", "framework", "ferox"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ferox"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

# CLI & Terminal
clap = { version = "4.5.51", features = ["derive", "color"] }
rustyline = "17.0.2"
colored = "2.2"
indicatif = "0.18.2"
console = "0.16.1"
atty = "0.2"
owo-colors = "3.5.0"
windows = { version = "0.54", features = ["Win32_System_Console"] }

# Networking
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio-stream = "0.1.17"
trust-dns-resolver = "0.23.2"
native-tls = "0.2"
tokio-native-tls = "0.3"
x509-parser = "0.16"

# Database
sqlx = { version = "0.8.6", features = ["runtime-tokio-rustls", "sqlite"] }
rusqlite = { version = "0.32", features = ["bundled"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Error Handling & Logging
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
lazy_static = "1.5.0"

# Report Generation
tera = "1.20.0"
printpdf = "0.7.0"

[dev-dependencies]
tokio-test = "0.4.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
