[workspace]
members = [".", "ferox-desktop/src-tauri"]
resolver = "2"

[package]
name = "ferox"
version = "2.0.0"
edition = "2024"
authors = ["Abdulwahed Mansour <abdulwahed.mansour@gmail.com>"]
description = "Ferocious security framework built in Rust - Fast, Fierce, Fearless"
license = "MIT"
repository = "https://github.com/abdulwahed-sweden/ferox"
keywords = ["security", "penetration-testing", "cybersecurity", "framework", "ferox"]
categories = ["command-line-utilities", "development-tools"]

[features]
default = ["memory-forensics"]
memory-forensics = [
	"dep:kdmp-parser",
	"dep:udmp-parser",
	"dep:minidump",
	"dep:pelite",
	"dep:goblin",
	"dep:memmap2",
	"dep:byteorder",
	"dep:regex",
	"dep:rayon",
	"dep:zeroize",
]
yara-support = ["memory-forensics", "yara"]
volatility-bridge = ["memory-forensics", "pyo3"]
full = [
	"memory-forensics",
	"yara-support",
	"volatility-bridge",
	"pdf-export",
]
pdf-export = ["printpdf"]

[lib]
name = "ferox"
path = "src/lib.rs"

[[bin]]
name = "ferox"
path = "src/main.rs"

[dependencies]
# Async Runtime
tokio = { version = "1.48.0", features = ["full"] }
async-trait = "0.1.89"
futures = "0.3.31"

# CLI & Terminal
clap = { version = "4.5.53", features = ["derive", "color"] }
rustyline = "17.0.2"
colored = "3.0.0"
indicatif = "0.18.3"
console = "0.16.1"
is-terminal = "0.4.17"
owo-colors = "4.2.3"
ratatui = { version = "0.29.0", default-features = false, features = ["crossterm"] }
crossterm = "0.29.0"

# Networking
reqwest = { version = "0.12.24", features = ["json", "rustls-tls"] }
tokio-stream = "0.1.17"
hickory-resolver = "0.25.2"
native-tls = "0.2.14"
tokio-native-tls = "0.3.1"
x509-parser = "0.18.0"

# Memory Forensics Stack
kdmp-parser = { version = "0.7.0", optional = true }
udmp-parser = { version = "0.2.0", optional = true }
minidump = { version = "0.26.1", optional = true }
pelite = { version = "0.10.0", optional = true }
goblin = { version = "0.10.3", optional = true }
windows = { version = "0.61.3", optional = true, features = [
	"Win32_System_Memory",
	"Win32_System_Diagnostics_Debug",
	"Win32_System_Threading",
	"Win32_Security",
] }
memmap2 = { version = "0.9.9", optional = true }
byteorder = { version = "1.5.0", optional = true }
regex = { version = "1.12.2", optional = true }
rayon = { version = "1.11.0", optional = true }
yara = { version = "0.31.0", optional = true }
pyo3 = { version = "0.27.1", features = ["auto-initialize"], optional = true }
zeroize = { version = "1.8.2", optional = true }

# Database
rusqlite = { version = "0.37.0", features = ["bundled"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
toml = "0.9.8"

# Error Handling & Logging
anyhow = "1.0.100"
thiserror = "2.0.17"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

# Utilities
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.18.1", features = ["v4", "serde"] }
lazy_static = "1.5.0"
dirs = "6.0.0"

# Handler dependencies (Phase 2)
sysinfo = "0.37.2"
base64 = "0.22.1"

# Report Generation
tera = "1.20.1"
printpdf = { version = "0.8.2", optional = true }

# Phase 3 lightweight crypto deps (RustCrypto) - small and widely used
aes-gcm = "0.10.3"
hmac = "0.12.1"
sha2 = "0.10.9"
hkdf = "0.12.4"
data-encoding = "2.9.0" # base32 helpers for dns_c2
hex = "0.4.3" # Phase 4: hex encoding for payload keys
rand = "0.9.2"

[dev-dependencies]
tokio-test = "0.4.4"
tempfile = "3.23.0"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.30.1", features = ["signal", "process"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3.9", features = ["consoleapi", "handleapi", "processenv", "winbase", "wincon"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
