[package]
name = "ferox-dashboard-server"
version = "1.0.0"
edition = "2024"
authors = ["Abdulwahed Mansour <abdulwahed.mansour@gmail.com>"]
description = "Real-time C2 Dashboard Server for Ferox Framework"
license = "MIT"

[[bin]]
name = "ferox-dashboard"
path = "src/main.rs"

[dependencies]
# Web Framework
axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "cors"] }

# WebSocket
tokio-tungstenite = "0.26"
futures = "0.3"

# Async Runtime
tokio = { version = "1.48", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database (optional for persistence)
# sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Core Ferox types
ferox = { path = "../" }

# Utilities
uuid = { version = "1.18", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "2.0"

[dev-dependencies]
tokio-test = "0.4"
