[package]
name = "ferox-desktop"
version = "1.0.0"
description = "Ferox C2 Desktop - Professional Red Team Operations Console"
authors = ["Abdulwahed Mansour <abdulwahed.mansour@gmail.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "ferox_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.5.2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2.9.3", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2.3.3"
tauri-plugin-notification = "2.3.3"
tauri-plugin-dialog = "2.4.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-fs = "2.4.4"
tauri-plugin-process = "2.3.1"

# Ferox Core Integration
ferox = { path = "../.." }

# Async Runtime
tokio = { version = "1.48.0", features = ["full", "sync", "process"] }
futures = "0.3.31"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
parking_lot = "0.12.5"
once_cell = "1.21.3"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
anyhow = "1.0.100"
thiserror = "2.0.17"
rand = "0.9.2"

# Security
secrecy = { version = "0.10", features = ["serde"] }
dirs = "5.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2.3.1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
